Initial test with Web Serial API

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -11,6 +11,7 @@
       "node",
       "@types/webpack-env",
       "./JSX",
+      "@types/w3c-web-serial"
     ],
     "jsx": "react",
     "jsxFactory": "jsx",
