--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@stylistic/eslint-plugin": "^5.5.0",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^24.9.2",
+    "@types/w3c-web-serial": "^1.0.8",
     "@types/webpack-env": "^1.18.8",
     "eslint": "^9.38.0",
     "parcel": "^2.16.0",
