Added a very basic Web Bluetooth API test

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -11,7 +11,8 @@
       "node",
       "@types/webpack-env",
       "./JSX",
-      "@types/w3c-web-serial"
+      "@types/w3c-web-serial",
+      "@types/web-bluetooth"
     ],
     "jsx": "react",
     "jsxFactory": "jsx",
