--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-serial",
-  "version": "0.0.2-alpha",
+  "version": "0.0.3-alpha",
   "author": {
     "name": "Hauke Dämpfling at the IGB Berlin",
     "email": "haukex@zero-g.net"
@@ -20,17 +20,18 @@
   },
   "devDependencies": {
     "@eslint/js": ">=9.38.0 <9.39.0 || >9.39.0",
-    "@parcel/transformer-sass": "^2.16.0",
-    "@parcel/transformer-typescript-tsc": "^2.16.0",
+    "@parcel/transformer-sass": "^2.16.1",
+    "@parcel/transformer-typescript-tsc": "^2.16.1",
     "@stylistic/eslint-plugin": "^5.5.0",
     "@types/bootstrap": "^5.2.10",
-    "@types/node": "^24.9.2",
+    "@types/node": "^24.10.0",
     "@types/w3c-web-serial": "^1.0.8",
+    "@types/web-bluetooth": "^0.0.21",
     "@types/webpack-env": "^1.18.8",
     "eslint": ">=9.38.0 <9.39.0 || >9.39.0",
-    "parcel": "^2.16.0",
+    "parcel": "^2.16.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.46.3"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
