--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-serial",
-  "version": "0.0.3-alpha",
+  "version": "0.1.0-beta",
   "author": {
     "name": "Hauke Dämpfling at the IGB Berlin",
     "email": "haukex@zero-g.net"
